# led-matrix-now-playing

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  Pipfile  README.md  emulator_config.json  pyproject.toml  requirements.txt  rgb-matrix.sh  sonar-project.properties
.github/workflows/: ci_deployment.yml  codspeed.yml
assets/fonts/: README  clR6x12.bdf  helvR12.bdf
led_matrix_controller/: main.py  rain.py
led_matrix_controller/models/: __init__.py  _rgbmatrix.py  artwork_image.py  matrix.py  text_label.py
led_matrix_controller/utils/: __init__.py  ca.py  const.py  mqtt.py
led_matrix_controller/utils/cellular_automata/: __init__.py  ca.py  ca2.py
service/: artwork_cache.service  install.sh  rgb_led_matrix.service
src/: __init__.py
src/application/controller/: artwork_cache.py  rgb_led_matrix.py
src/application/handler/: mqtt.py
src/domain/model/: artwork_image.py  led_matrix_now_playing_display.py  matrix.py  text_label.py
src/rgbmatrix/: README.md  __init__.py  core.cpp  graphics.cpp
src/rpi-rgb-led-matrix/: setup.py
src/rpi-rgb-led-matrix/rgbmatrix/: __init__.py
tests/: test__grid.py
tests/benchmark/: test__ca.py
